--- a/readme
+++ b/readme
@@ -1,3 +1,46 @@
+Create a database called 'publications'.
+This database will have two tables called 'authors' and 'titles'.
+
+Table 'authors' will have following schema:
+ 
++---------+--------------+------+-----+---------+-------+
+| Field   | Type         | Null | Key | Default | Extra |
++---------+--------------+------+-----+---------+-------+
+| name    | varchar(120) | YES  |     | NULL    |       |
+| email   | varchar(100) | YES  |     | NULL    |       |
+| country | varchar(30)  | YES  |     | NULL    |       |
++---------+--------------+------+-----+---------+-------+
+
+ 
+Table 'titles' will have following schema:
++-------+--------------+------+-----+---------+-------+
+| Field | Type         | Null | Key | Default | Extra |
++-------+--------------+------+-----+---------+-------+
+| name  | varchar(120) | YES  |     | NULL    |       |
+| title | varchar(120) | YES  |     | NULL    |       |
+| year  | smallint(6)  | YES  |     | NULL    |       |
++-------+--------------+------+-----+---------+-------+
+ 
+ 
+Write a PHP program in which you communicate with this database 
+and have following functionalities:
+
+1.1) Display all the records in both the tables.
+1.2) Adding a record (available for both the tables).
+1.3) Deleting a record (available for both the tables).
+1.4) Updating year of publication.  
+1.5) Given a book find its author and year of publication.
+     It might be possible that user might submit a substring in the book.
+
+1.6) Given an year -- list the books published in that year and 
+                      display total number of such books also.
+
+1.7) Given a country-- find all the books (names of the books) 
+     which authors from that country have published, publication year.
+     ( i.e., country wise listing of books, authors along with publication year).
+
+-----------------------------------------------------------------------------------
+ 
 You can start with "connect.php" which will connect you to the database.
 
 OR
